--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon website.js"
   },
   "keywords": [],
   "author": "",
@@ -11,10 +11,19 @@
   "description": "",
   "dependencies": {
     "@google-cloud/bigquery": "^7.8.0",
+    "@langchain/community": "^0.2.19",
+    "@langchain/core": "^0.2.17",
+    "@langchain/openai": "^0.2.4",
+    "cheerio": "^1.0.0-rc.12",
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "html-to-text": "^9.0.5",
+    "jsdom": "^24.1.0",
     "langchain": "^0.2.10",
-    "pdf-parse": "^1.1.1"
+    "pdf-parse": "^1.1.1",
+    "playwright": "^1.45.2",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
