--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "@google-cloud/bigquery": "^7.8.0",
+    "@google/generative-ai": "^0.15.0",
     "@langchain/community": "^0.2.19",
     "@langchain/core": "^0.2.17",
+    "@langchain/google-genai": "^0.0.23",
+    "@langchain/google-vertexai": "^0.0.20",
     "@langchain/openai": "^0.2.4",
     "cheerio": "^1.0.0-rc.12",
     "colors": "^1.4.0",
@@ -22,9 +25,11 @@
     "jsdom": "^24.1.0",
     "langchain": "^0.2.10",
     "openai": "^4.52.7",
+    "openweather-apis": "^4.5.0",
     "pdf-parse": "^1.1.1",
     "playwright": "^1.45.2",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "yahoo-finance2": "^2.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
